Create Product (Model / Controller)

--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   "homepage": "https://github.com/Andre-Borges/NodeJS-Starter#readme",
   "dependencies": {
     "express": "^4.17.1",
-    "mongoose": "^5.7.10"
+    "mongoose": "^5.7.10",
+    "require-dir": "^1.2.0"
   },
   "devDependencies": {
     "nodemon": "^1.19.4"
